tests/negative/test_ind_bad_type.orb
fnc main () () {
    sym a:(i32 cn);
    = ([] a 0) 0;
};